@@ -1,0 +1,28 @@
+%tr.build.alert{class: build_status_alert_class(build)}
+  %td.status
+    = build.status
+
+  %td.runner
+    - if build.runner
+      = link_to build.runner.id, admin_runner_path(build.runner)
+
+  %td.build-link
+    = link_to build_url(build) do
+      %strong #{build.short_sha}
+
+  %td.build-project
+    = truncate build.project.name, length: 30
+
+  %td.build-message
+    %span= truncate(build.git_commit_message, length: 50)
+
+  %td.build-branch
+    = build.ref
+
+  %td.duration
+    - if build.duration
+      #{distance_of_time_in_words build.duration}
+
+  %td.timestamp
+    - if build.finished_at
+      %span #{time_ago_in_words build.finished_at} ago
