@@ -16,6 +16,9 @@
           %li
             = link_to admin_projects_path do
               Projects
+          %li
+            = link_to admin_builds_path do
+              Builds
         %li
           = link_to 'Help', help_path
 
